# family-tree

backend/: alembic.ini  config.yaml  gen_requirements.sh  makefile  pyproject.toml  pytest.ini  test.config.yaml
backend/requirements/: dev_requirements.txt  prod_requirements.txt  test_requirements.txt
backend/src/api/: __init__.py  config.py  utils.py
backend/src/api/v1/: __init__.py  interest.py  person.py  personal_info.py
backend/src/biography/: __init__.py
backend/src/biography/schema/: fields.py  schema.py
backend/src/common/: exceptions.py  repository.py  schema.py  types.py
backend/src/common/repository/: exceptions.py
backend/src/common/schema/: __init__.py  config.py  fields.py  filter.py  schema.py
backend/src/common/service/: exceptions.py
backend/src/contact/repository/: interface.py  sqlalchemy.py
backend/src/database/: __init__.py  config.py  utils.py
backend/src/person/: __init__.py  person_repository.py  person_schema.py  person_service.py
backend/src/repo/: person.py
backend/src/schemas/: base.py  person.py
backend/src/tables/: __init__.py  base.py  person.py
backend/static/api_doc/: swagger-ui.css
backend/tests/: conftest.py
backend/tests/factory/: person_factory.py
backend/tests/test_interest/: conftest.py  interest_factory.py  test_endpoints_v1.py  test_interest_repository_sqlalchemy.py  test_interest_service.py
backend/tests/test_repository/: test_person_repository.py
backend/tests/test_schema/: test_person_filter.py  test_person_schema.py
backend/tests/test_service/: test_person_service.py
(+80 files in other folders)
